--- a/armarker.html
+++ b/armarker.html
@@ -1,27 +1,53 @@
-<!DOCTYPE html>
+<!doctype HTML>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>GeoAR.js demo</title>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-  </head>
+<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+<script src="https://raw.githack.com/jeromeetienne/AR.js/2.1.8/aframe/build/aframe-ar.js"></script>
 
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene
-      vr-mode-ui="enabled: false"
-      embedded
-      arjs="sourceType: webcam; debugUIEnabled: false;"
-    >
-      <a-text
-        value="This content will always face you."
-        look-at="[gps-camera]"
-        scale="120 120 120"
-        gps-entity-place="latitude: 41.9290; longitude: 12.5700;"
-      ></a-text>
-      <a-camera gps-camera rotation-reader> </a-camera>
-    </a-scene>
-  </body>
+<script>
+  window.onload = () => {
+    // setTimeout(() => {
+    let places = staticLoadPlaces();
+    return renderPlaces(places);
+    // }, 3000)
+
+    function staticLoadPlaces() {
+      return [{
+        name: "Your place name",
+        location: {
+          lat: 43.903165, // change here latitude if using static data
+          lng: -78.947519, // change here longitude if using static data
+        }
+      }];
+    }
+
+    function renderPlaces(places) {
+      let scene = document.querySelector('a-scene');
+
+      places.forEach((place) => {
+        let latitude = place.location.lat;
+        let longitude = place.location.lng;
+
+        // add place name
+        let text = document.createElement('a-link');
+        text.setAttribute('gps-entity-place', `latitude: ${latitude}; longitude: ${longitude};`);
+        text.setAttribute('title', place.name);
+        text.setAttribute('href', 'http://www.example.com/');
+        text.setAttribute('scale', '15 15 15');
+
+        text.addEventListener('loaded', () => {
+          window.dispatchEvent(new CustomEvent('gps-entity-place-loaded'))
+        });
+
+        scene.appendChild(text);
+      });
+    }
+  }
+</script>
+
+<body style='margin : 0px; overflow: hidden;'>
+  <a-scene vr-mode-ui="enabled: false" embedded arjs>
+    <a-camera gps-camera rotation-reader></a-camera>
+  </a-scene>
+</body>
+
 </html>
