--- a/armarker.html
+++ b/armarker.html
@@ -10,6 +10,15 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   </head>
 
+  <script>
+    AFRAME.registerComponent('clickhandler', {
+        init: function() {
+            this.el.addEventListener('click', () => {
+                alert('Clicked!')
+            });
+    }});
+  </script>
+
   <body style="margin: 0; overflow: hidden">
     <!-- <a-scene
       vr-mode-ui="enabled: false"
@@ -31,28 +40,34 @@
       >
       </a-camera>
     </a-scene> -->
+    <!-- <a-scene
+      vr-mode-ui="enabled: false"
+      embedded
+      arjs='sourceType: webcam; debugUIEnabled: false;'>
+      <a-image src="place.png" gps-entity-place="latitude: 44.504348; longitude: 11.301027;"></a-image>
+
+      <a-camera
+          rotation-reader
+          gps-camera="simulateLatitude: 44.50437; simulateLongitude: 11.30106; gpsMinDistance: 10;"
+      >
+      </a-camera>
+    </a-scene> -->
     <a-scene
+      cursor='rayOrigin: mouse; fuse: true; fuseTimeout: 0;'
+      raycaster="objects: [clickhandler];"
       vr-mode-ui="enabled: false"
       embedded
       arjs='sourceType: webcam; debugUIEnabled: false;'>
 
-          <!-- ~ 400m far -->
-          <!-- <a-box material="color: red;" scale="5 5 5" gps-entity-place="latitude: 44.506477; longitude: 11.301524;"></a-box> -->
+          <a-box
+              clickhandler
+              material="color: red;"
+              scale="20 20 20"
+              gps-entity-place="latitude: 44.504348; longitude: 11.301027;">
+          </a-box>
 
-          <!-- ~ 20m far -->
-          <!-- <a-image src="place.png" gps-entity-place="latitude: 44.504417; longitude: 11.301317;"
-          ></a-image> -->
-
-          <!-- ~ 0m far -->
-          <a-image src="place.png" gps-entity-place="latitude: 44.504348; longitude: 11.301027;"
-              ></a-image>
-
-          <!-- using gpsMinDistance: 5 => update GPS only if user moves by 5 meters or more => avoid shaking for near objects -->
-          <!-- using accelerationToMove: 1.0 => 'smooth' inertial sensors precision precision in order to avoid distant places shaking -->
-          <a-camera
-              rotation-reader
-              gps-camera="simulateLatitude: 44.50437; simulateLongitude: 11.30106; gpsMinDistance: 10;"
-          >
+          <a-camera gps-camera rotation-reader
+            gps-camera="simulateLatitude: 44.50437; simulateLongitude: 11.30106;">
       </a-camera>
     </a-scene>
   </body>
