--- a/armarker.html
+++ b/armarker.html
@@ -40,19 +40,23 @@
       >
       </a-camera>
     </a-scene> -->
-    <!-- <a-scene
+    <a-scene
+      cursor='rayOrigin: mouse; fuse: true; fuseTimeout: 0;'
+      raycaster="objects: [clickhandler];"
       vr-mode-ui="enabled: false"
       embedded
       arjs='sourceType: webcam; debugUIEnabled: false;'>
-      <a-image src="place.png" gps-entity-place="latitude: 44.504348; longitude: 11.301027;"></a-image>
+      <a-image 
+        clickhandler
+        src="place.png" gps-entity-place="latitude: 44.504348; longitude: 11.301027;"></a-image>
 
       <a-camera
           rotation-reader
           gps-camera="simulateLatitude: 44.50437; simulateLongitude: 11.30106; gpsMinDistance: 10;"
       >
       </a-camera>
-    </a-scene> -->
-    <a-scene
+    </a-scene>
+    <!-- <a-scene
       cursor='rayOrigin: mouse; fuse: true; fuseTimeout: 0;'
       raycaster="objects: [clickhandler];"
       vr-mode-ui="enabled: false"
@@ -67,9 +71,9 @@
           </a-box>
 
           <a-camera gps-camera rotation-reader
-            gps-camera="simulateLatitude: 44.50437; simulateLongitude: 11.30106;">
+          gps-camera="simulateLatitude: 44.50437; simulateLongitude: 11.30106; gpsMinDistance: 10;">
       </a-camera>
-    </a-scene>
+    </a-scene> -->
   </body>
 
   <script>
