video with assets source (commented), panorama example picture and asset

--- a/vid.html
+++ b/vid.html
@@ -22,6 +22,14 @@
           loop="true"
           crossorigin="anonymous"
         ></video>
+        <!-- <video
+          id="video"
+          preload="auto"
+          src="assets/test.mp4"
+          autoplay
+          loop="true"
+          crossorigin="anonymous"
+        ></video> -->
       </a-assets>
       <a-videosphere
         rotation="0 -90 0"
